전체 리팩토링 진행